--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -1,13 +1,19 @@
-.resumeContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 2vw auto 5vw auto;
+.resume-page {
+  text-align: center;
+  transition: 0.3s ease;
 }
-
+.resume-page:hover {
+  transition: 0.3s ease;
+}
+.resumeContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2vw auto 5vw auto;
+}
 .resume {
-    width: 80vw;
-    box-shadow: 0.3vw 0.2vw 0.3vw rgba(180, 180, 180, 0.5),
-                0.3vw 0.4vw 0.3vw rgba(210, 210, 210, 0.5),
-                0.3vw 0.6vw 0.3vw rgba(210, 210, 210, 0.5);
+  width: 80vw;
+  box-shadow: 0.3vw 0.2vw 0.3vw rgba(180, 180, 180, 0.5),
+    0.3vw 0.4vw 0.3vw rgba(210, 210, 210, 0.5),
+    0.3vw 0.6vw 0.3vw rgba(210, 210, 210, 0.5);
 }
