--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Red+Hat+Display&display=swap");
 body {
-  background-color: rgb(240, 240, 240);
+  box-sizing: border-box;
+  /* background-color: rgb(240, 240, 240); */
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .link {
