Changed classNames and prop names for better consistency. Added transition animations for carousel arrows.

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,4 +1,4 @@
-.slider {
+.carousel {
   position: relative;
   width: 60vw;
   height: 50vw;
@@ -6,48 +6,73 @@
   overflow-x: hidden;
   white-space: nowrap;
 }
-
-.slider-wrapper {
+.carousel-wrapper {
   position: relative;
   height: 100%;
   width: 100%;
 }
-
 .slide {
   display: inline-block;
   height: 100%;
   width: 100%;
 }
-
 .arrow {
   height: 50px;
   width: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f9f9f9;
+  background: grey;
   border-radius: 50%;
   cursor: pointer;
   transition: transform ease-in 0.1s;
+  text-align: center;
 }
-
-.nextArrow {
+.next-arrow {
   position: absolute;
   top: 50%;
   right: 25px;
   z-index: 999;
-  color: #fff;
+  color: black;
 }
-
-.backArrow {
+.back-arrow {
   position: absolute;
   top: 50%;
   left: 25px;
   z-index: 999;
-  color: #fff;
+  color: black;
 }
-
-.fa-arrow-right:before,
-.fa-arrow-left:before {
-  color: #222;
+.arrow span {
+  display: inline-block;
+  transition: 0.3s ease;
+}
+.arrow .back:before {
+  content: "\21e0";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: -2vw;
+  transition: 0.3s ease;
+}
+.arrow .next:after {
+  content: "\21e2";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -2vw;
+  transition: 0.3s ease;
+}
+.arrow:hover .back {
+  padding-left: 2vw;
+}
+.arrow:hover .next {
+  padding-right: 2vw;
+}
+.arrow:hover .back:before {
+  opacity: 1;
+  left: 0;
+}
+.arrow:hover .next:after {
+  opacity: 1;
+  right: 0;
 }
