--- a/src/App.css
+++ b/src/App.css
@@ -7,43 +7,22 @@ body {
   justify-content: flex-start;
   align-items: center;
   height: 75px;
+  padding-bottom: 5px;
   background-color: rgb(210, 210, 210);
 }
 .portfolio-tab {
   text-align: center;
-  background-color: grey;
   z-index: 10;
   width: 150px;
   height: 50px;
   font-size: 1.5rem;
   margin-left: -4px;
-  background-color: rgb(70, 110, 195);
+  background-color: rgb(35, 55, 165);
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
-  box-shadow: 1px 1px 2px rgb(30, 30, 30), 2px 2px 4px rgb(30, 30, 30);
+  box-shadow: 1px 1px 2px rgb(20, 20, 60), 2px 2px 4px rgb(20, 20, 60);
 }
-.projects-tab {
-  text-align: center;
-  background-color: grey;
-  margin-top: 6px;
-  margin-left: -20px;
-  z-index: 5;
-  width: 120px;
-  height: 40px;
-  background-color: rgb(20, 55, 130);
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
-  box-shadow: 1px 1px 1px rgba(30, 30, 30);
-}
-.portfolio-tab:hover {
-  margin: 2px -4px -2px 0px;
-  box-shadow: none;
-}
-.projects-tab:hover {
-  margin: 8px 0px -2px -18px;
-  box-shadow: none;
-}
-.link {
+.portfolio-tab .link {
   position: relative;
   top: 20%;
   color: rgba(240, 240, 240);
@@ -51,7 +30,68 @@ body {
   text-shadow: -0.05vw -0.05vw 0 rgba(50, 50, 50, 0.9),
     -0.075vw -0.075vw 0 rgba(50, 50, 50, 0.9);
 }
-.portfolio-tab:hover .link,
-.projects-tab:hover .link {
+.portfolio-tab:hover {
+  background-color: rgb(15, 35, 130);
+}
+.portfolio-tab:active {
+  margin: 2px -4px -2px 0px;
+  box-shadow: none;
+}
+.portfolio-tab:active .link {
   text-shadow: none;
+}
+.projects-tab {
+  text-align: center;
+  margin-top: 10px;
+  margin-left: -18px;
+  z-index: 5;
+  width: 110px;
+  height: 40px;
+  background-color: white;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  transition: 0.3s ease;
+}
+.projects-tab .link {
+  color: black;
+}
+.projects-tab:hover {
+  width: 150px;
+}
+.projects-tab:active {
+  background-color: rgb(75, 75, 75);
+  transition: 0.1s ease;
+}
+.projects-tab:active .link {
+  color: white;
+}
+.resume-tab {
+  text-align: center;
+  margin-top: 10px;
+  margin-left: -18px;
+  z-index: 3;
+  width: 110px;
+  height: 40px;
+  background-color: rgb(75, 75, 75);
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  transition: 0.3s ease;
+}
+.resume-tab:hover {
+  width: 150px;
+}
+.resume-tab:active {
+  background-color: white;
+  transition: 0.1s ease;
+}
+.resume-tab:active .link {
+  color: black;
+}
+.link {
+  position: relative;
+  top: 20%;
+  color: rgba(240, 240, 240);
+  text-decoration: none;
+  user-select: none;
+  padding: 20px 25% 20px 22%;
 }
