Imported pdf icon image in Resume component. Adjusted positioning of 'View PDF' link.

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -6,8 +6,21 @@
   margin-top: 2%;
 }
 .pdf-link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-weight: bold;
   text-decoration: none;
   user-select: contain;
+}
+.pdf-link:hover .view {
+  color: blue;
+}
+.pdf {
+  height: 30px;
+  margin: 0 5px 5px 0;
 }
 .image-container {
   display: flex;
