--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   height: 75px;
   padding-bottom: 5px;
-  background-color: rgb(210, 210, 210);
+  /* background-color: rgb(210, 210, 210); */
 }
 .portfolio-tab {
   text-align: center;
@@ -25,7 +25,7 @@ body {
 .portfolio-tab .link {
   position: relative;
   top: 20%;
-  color: rgba(240, 240, 240);
+  color: white;
   text-decoration: none;
   text-shadow: -0.05vw -0.05vw 0 rgba(50, 50, 50, 0.9),
     -0.075vw -0.075vw 0 rgba(50, 50, 50, 0.9);
