--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
+
 .carousel-container {
   width: 100%;
 }
@@ -9,12 +11,18 @@
   white-space: nowrap;
 }
 .carousel-wrapper {
+  width: 100%;
   height: 100%;
+  user-select: none;
 }
 .slide {
   display: inline-block;
   height: 100%;
   width: 100%;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3rem;
+  padding-bottom: 10%;
 }
 .arrow {
   height: 80px;
