--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,15 @@ body {
   border-left: 25px solid white;
   transition: 0.1s ease;
 }
+.icon-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10;
+}
+.icon-link {
+  color: black;
+}
+.icon {
+  margin: 2rem 1rem 0 0;
+}
