--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 .home-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  user-select: none;
+}
+.profile-figure {
+  text-align: center;
 }
 .profile {
   height: 200px;
   border-radius: 50%;
+}
+.job-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 200;
 }
