--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -33,7 +33,7 @@
   border-radius: 50%;
   cursor: pointer;
 }
-.back-arrow {
+/* .back-arrow {
   position: fixed;
   left: 10%;
   top: 450px;
@@ -46,7 +46,7 @@
   right: 10%;
   color: black;
   z-index: 10;
-}
+} */
 .back,
 .next,
 .back-hover,
@@ -60,19 +60,124 @@
 .next-hover {
   opacity: 0;
 }
-.arrow:hover .back {
-  padding-left: 35px;
-  opacity: 0.3;
+@media (hover: hover) {
+  .arrow:hover .back {
+    padding-left: 35px;
+    opacity: 0.3;
+  }
+  .arrow:hover .next {
+    padding-right: 35px;
+    opacity: 0.3;
+  }
+  .arrow:hover .back-hover {
+    padding-right: 35px;
+    opacity: 1;
+  }
+  .arrow:hover .next-hover {
+    padding-left: 35px;
+    opacity: 1;
+  }
 }
-.arrow:hover .next {
-  padding-right: 35px;
-  opacity: 0.3;
+@media only screen and (max-width: 320px) {
+  .carousel-container {
+    width: 100%;
+  }
+  .carousel-wrapper {
+    width: 100%;
+    height: 100%;
+    user-select: none;
+  }
+  .slide {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 3rem;
+    padding-bottom: 10%;
+  }
+  .arrow {
+    height: 80px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .back-arrow {
+    position: fixed;
+    left: 35%;
+    top: 50%;
+    color: black;
+    z-index: 10;
+  }
+  .next-arrow {
+    position: fixed;
+    top: 50%;
+    right: 35%;
+    color: black;
+    z-index: 10;
+  }
+  .back,
+  .next,
+  .back-hover,
+  .next-hover {
+    position: fixed;
+    transition: 0.3s ease;
+    font-size: 3rem;
+    user-select: none;
+  }
+  .back-hover,
+  .next-hover {
+    opacity: 0;
+  }
 }
-.arrow:hover .back-hover {
-  padding-right: 35px;
-  opacity: 1;
-}
-.arrow:hover .next-hover {
-  padding-left: 35px;
-  opacity: 1;
+@media only screen and (max-width: 568px) {
+  .carousel-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 568px;
+  }
+  .carousel {
+    width: 360px;
+    height: 270px;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .carousel-wrapper {
+    width: 360px;
+    height: 270px;
+    user-select: none;
+  }
+  .slide {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 2rem;
+    padding-bottom: 10%;
+  }
+  .arrow-container {
+    display: flex;
+    justify-content: center;
+  }
+  .arrow {
+    height: 80px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .back-arrow {
+    color: black;
+  }
+  .next-arrow {
+    color: black;
+  }
 }
