--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(210, 210, 220);
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 .navbar {
   display: flex;
@@ -37,8 +38,62 @@ body {
   background-color: rgb(75, 75, 75);
   color: white;
 }
-
-@media only screen and (min-width: 569px) {
+@media only screen and (max-width: 768px) {
+  .navbar {
+    width: 100%;
+    height: 50px;
+  }
+  .tab-container {
+    min-width: 100px;
+    width: 33.33%;
+  }
+  .dev-tab,
+  .projects-tab,
+  .resume-tab {
+    text-align: center;
+    line-height: 2.4;
+    width: 100%;
+    height: 30px;
+    font-size: 0.75rem;
+  }
+  .dev-tab:active,
+  .projects-tab:active,
+  .resume-tab:active {
+    transition: none;
+  }
+  .dev-tab {
+    box-shadow: none;
+    margin: 0;
+  }
+  .projects-tab,
+  .resume-tab {
+    margin: 0 0 0 -18px;
+  }
+  .resume-tab .link {
+    color: rgba(240, 240, 240);
+  }
+  .tab-container {
+    display: flex;
+    flex-direction: row;
+  }
+  .dev-right-point,
+  .right-point {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+  }
+  .dev-right-point {
+    border-left: 15px solid rgb(35, 55, 165);
+  }
+  .projects-tab-container .right-point {
+    border-left: 20px solid white;
+  }
+  .resume-tab-container .right-point {
+    border-left: 20px solid rgb(75, 75, 75);
+  }
+}
+@media only screen and (min-width: 769px) {
   .navbar {
     height: 75px;
     padding-bottom: 5px;
@@ -108,27 +163,27 @@ body {
   }
   .projects-tab-container:active .projects-tab {
     background-color: rgb(75, 75, 75);
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .projects-tab-container:active .right-point {
     border-left: 25px solid rgb(75, 75, 75);
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .projects-tab-container:active .link {
     color: white;
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .resume-tab-container:active .resume-tab {
     background-color: white;
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .resume-tab-container:active .right-point {
     border-left: 25px solid white;
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .resume-tab-container:active .link {
     color: black;
-    transition: 0.1s ease;
+    transition: 0.2s ease;
   }
   .dev-tab-container:active {
     margin: 2px -1px -2px 1px;
@@ -149,58 +204,5 @@ body {
   .resume-tab:hover {
     width: 130px;
     transition: 0.2s ease;
-  }
-}
-@media only screen and (max-width: 568px) {
-  body {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  }
-  .navbar {
-    height: 50px;
-  }
-  .dev-tab,
-  .projects-tab,
-  .resume-tab {
-    text-align: center;
-    line-height: 2.4;
-    width: 100px;
-    height: 30px;
-    font-size: 0.75rem;
-  }
-  .dev-tab:active,
-  .projects-tab:active,
-  .resume-tab:active {
-    transition: none;
-  }
-  .dev-tab {
-    box-shadow: none;
-    margin: 0;
-  }
-  .projects-tab,
-  .resume-tab {
-    margin: 0 0 0 -18px;
-  }
-  .resume-tab .link {
-    color: rgba(240, 240, 240);
-  }
-  .tab-container {
-    display: flex;
-    flex-direction: row;
-  }
-  .dev-right-point,
-  .right-point {
-    width: 0;
-    height: 0;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-  }
-  .dev-right-point {
-    border-left: 15px solid rgb(35, 55, 165);
-  }
-  .projects-tab-container .right-point {
-    border-left: 20px solid white;
-  }
-  .resume-tab-container .right-point {
-    border-left: 20px solid rgb(75, 75, 75);
   }
 }
