--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
 .home-container {
   display: flex;
   flex-direction: column;
@@ -15,4 +16,65 @@
   font-family: "Montserrat", sans-serif;
   font-size: 1.5rem;
   font-weight: 200;
+  margin: 1rem 0;
+}
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.skills-container {
+  position: fixed;
+  top: 2%;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.header-container {
+  width: 10rem;
+  height: 4rem;
+  margin: 0;
+  border-top-left-radius: 25px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.5) 10%,
+    rgba(255, 255, 255, 1) 50%
+  );
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 2px 2px 2px rgba(0, 0, 0, 0.4),
+    2px 2px 2px rgba(0, 0, 0, 0.5), 3px 3px 3px rgba(0, 0, 0, 0.4);
+}
+.skills-header {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 200;
+  padding: 0 0.5rem;
+}
+.figure-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 10rem;
+  border-bottom-left-radius: 25px;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.5) 10%,
+    rgba(255, 255, 255, 1) 50%
+  );
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+  font-size: 1rem;
+}
+.title-icon {
+  margin: 0 0.25rem;
+}
+.github {
+  width: 30px;
+  height: 30px;
+}
+.linkedin {
+  width: 35px;
+  height: 35px;
 }
