--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -2,6 +2,8 @@
 
 .carousel-container {
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 .carousel {
   width: 800px;
@@ -33,20 +35,6 @@
   border-radius: 50%;
   cursor: pointer;
 }
-/* .back-arrow {
-  position: fixed;
-  left: 10%;
-  top: 450px;
-  color: black;
-  z-index: 10;
-}
-.next-arrow {
-  position: fixed;
-  top: 450px;
-  right: 10%;
-  color: black;
-  z-index: 10;
-} */
 .back,
 .next,
 .back-hover,
