Fixed Carousel Responsiveness and changed styling for navbar.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   background: linear-gradient(
@@ -7,6 +8,8 @@ body {
   );
   background-repeat: no-repeat;
   min-height: 100vh;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 .navbar {
   display: flex;
@@ -14,6 +17,8 @@ body {
   justify-content: flex-start;
   align-items: center;
   user-select: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
 }
 .tab-container {
   display: flex;
@@ -21,9 +26,11 @@ body {
   text-decoration: none;
   user-select: none;
   line-height: 2;
+  text-align: center;
 }
 .dev-tab-container {
   z-index: 10;
+  transition: 0.3s ease;
 }
 .projects-tab-container {
   z-index: 8;
@@ -32,7 +39,7 @@ body {
   z-index: 6;
 }
 .dev-tab {
-  background-color: rgb(35, 55, 165);
+  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 30, 180) 100%);
   color: white;
   box-shadow: 1px 1px rgb(20, 20, 60), 2px 2px rgb(20, 20, 60);
 }
@@ -44,23 +51,22 @@ body {
   background-color: rgb(75, 75, 75);
   color: white;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .navbar {
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
     height: 50px;
+    overflow-x: hidden;
   }
   .tab-container {
-    min-width: 100px;
+    min-width: 120px;
     width: 33.33%;
+    text-align: center;
+    font-size: 0.9rem;
   }
   .dev-tab,
-  .projects-tab,
-  .resume-tab {
-    text-align: center;
-    line-height: 2.4;
-    width: 100%;
-    height: 30px;
-    font-size: 0.75rem;
+  .projects-tab {
+    width: 110%;
   }
   .dev-tab:active,
   .projects-tab:active,
@@ -75,6 +81,9 @@ body {
   .resume-tab {
     margin: 0 0 0 -18px;
   }
+  .resume-tab {
+    width: 110%;
+  }
   .resume-tab .link {
     color: rgba(240, 240, 240);
   }
@@ -86,29 +95,27 @@ body {
   .right-point {
     width: 0;
     height: 0;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
+    border-top: 14px solid transparent;
+    border-bottom: 14px solid transparent;
   }
   .dev-right-point {
-    border-left: 15px solid rgb(35, 55, 165);
+    border-left: 15px solid rgb(0, 30, 180);
   }
   .projects-tab-container .right-point {
-    border-left: 20px solid white;
+    border-left: 15px solid white;
   }
   .resume-tab-container .right-point {
-    border-left: 20px solid rgb(75, 75, 75);
+    display: hidden;
   }
 }
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 768px) {
   .navbar {
     height: 75px;
     padding-bottom: 5px;
   }
-  .tab-container {
-    text-align: end;
-  }
   .dev-tab-container {
     z-index: 10;
+    transition: none;
   }
   .projects-tab-container {
     z-index: 8;
@@ -117,7 +124,7 @@ body {
     z-index: 6;
   }
   .dev-tab {
-    width: 130px;
+    width: 200px;
     height: 50px;
     font-size: 1.5rem;
     margin-left: -4px;
@@ -126,9 +133,10 @@ body {
   .resume-tab {
     margin-top: 14px;
     margin-left: -25px;
-    width: 90px;
+    width: 180px;
     height: 40px;
-    line-height: 2.3;
+    line-height: 1.8;
+    font-size: 1.3rem;
     transition: 0.2s ease;
   }
   .projects-tab {
@@ -142,7 +150,7 @@ body {
   .dev-right-point {
     border-top: 25px solid transparent;
     border-bottom: 25px solid transparent;
-    border-left: 25px solid rgb(35, 55, 165);
+    border-left: 25px solid rgb(0, 30, 180);
   }
   .right-point {
     border-top: 20px solid transparent;
@@ -185,18 +193,9 @@ body {
   .dev-tab-container:active .dev-tab {
     box-shadow: none;
   }
-  .dev-tab-container:active .link {
-    text-shadow: none;
-  }
-  .dev-tab-container:hover .dev-tab {
-    background-color: rgb(15, 35, 130);
-  }
-  .dev-tab-container:hover .dev-right-point {
-    border-left: 25px solid rgb(15, 35, 130);
-  }
   .projects-tab:hover,
   .resume-tab:hover {
-    width: 130px;
+    width: 240px;
     transition: 0.2s ease;
   }
 }
