Fixed responsiveness of Home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
+html {
+  min-height: 100%;
+}
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   background: linear-gradient(
@@ -7,7 +10,6 @@ body {
     rgba(100, 100, 100, 0.4) 100%
   );
   background-repeat: no-repeat;
-  min-height: 100vh;
   box-sizing: border-box;
   overflow-x: hidden;
 }
@@ -59,8 +61,7 @@ body {
     overflow-x: hidden;
   }
   .tab-container {
-    min-width: 120px;
-    width: 33.33%;
+    min-width: 36vw;
     text-align: center;
     font-size: 0.9rem;
   }
@@ -109,6 +110,9 @@ body {
   }
 }
 @media only screen and (min-width: 768px) {
+  body {
+    min-height: 100vh;
+  }
   .navbar {
     height: 75px;
     padding-bottom: 5px;
