--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   user-select: none;
+  align-items: center;
 }
 .profile-figure {
   text-align: center;
@@ -77,4 +78,25 @@
 .linkedin {
   width: 35px;
   height: 35px;
+}
+@media only screen and (max-width: 768px) {
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  .skills-container {
+    position: static;
+  }
+  .header-container {
+    border-top-right-radius: 25px;
+    width: 18rem;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 2px 1px rgba(0, 0, 0, 0.4),
+      0px 2px 1px rgba(0, 0, 0, 0.5), 0px 3px 1px rgba(0, 0, 0, 0.4);
+  }
+  .figure-container {
+    border-bottom-left-radius: 0;
+    width: 18rem;
+  }
 }
