--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -58,62 +58,7 @@
     opacity: 1;
   }
 }
-@media only screen and (max-width: 320px) {
-  .carousel-container {
-    max-width: 320px;
-  }
-  .carousel-wrapper {
-    max-width: 320px;
-    height: 240px;
-    user-select: none;
-  }
-  .slide {
-    display: inline-block;
-    max-width: 320px;
-    height: 240px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 3rem;
-    padding-bottom: 10%;
-  }
-  .arrow {
-    height: 80px;
-    width: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  .back-arrow {
-    position: fixed;
-    left: 0;
-    top: 50%;
-    color: black;
-    z-index: 10;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 50%;
-    right: 0;
-    color: black;
-    z-index: 10;
-  }
-  .back,
-  .next,
-  .back-hover,
-  .next-hover {
-    position: fixed;
-    transition: 0.3s ease;
-    font-size: 3rem;
-    user-select: none;
-  }
-  .back-hover,
-  .next-hover {
-    opacity: 0;
-  }
-}
-@media only screen and (min-width: 321px) and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .carousel-container {
     display: flex;
     flex-direction: column;
@@ -158,7 +103,7 @@
     color: black;
   }
 }
-@media only screen and (min-width: 769px) and (max-width: 992px) {
+/* @media only screen and (min-width: 769px) and (max-width: 992px) {
   .carousel-container {
     display: flex;
     flex-direction: column;
@@ -198,8 +143,8 @@
     right: 0;
     color: black;
   }
-}
-@media only screen and (min-width: 993px) {
+} */
+@media only screen and (min-width: 769px) {
   .carousel-container {
     display: flex;
     flex-direction: column;
