--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -13,10 +13,50 @@
   display: inline-block;
   height: 100%;
   width: 100%;
-  text-align: center;
   font-family: "Montserrat", sans-serif;
+  list-style: none;
+}
+.slide-contents {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.image {
+  width: 40%;
+}
+.project-details {
+  width: 40%;
+}
+.name {
   font-size: 3rem;
-  padding-bottom: 10%;
+  font-weight: 200;
+}
+.technologies-container,
+.description-container {
+  text-align: left;
+  white-space: normal;
+}
+.title {
+  font-size: 1.5rem;
+  font-weight: 100;
+}
+.details {
+  font-size: 1rem;
+  font-weight: 100;
+}
+.project-link-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-top: 10px;
+}
+.project-link {
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
+}
+.project-link:hover {
+  color: blue;
 }
 .arrow {
   height: 80px;
